# lds_python

./: .gitignore  README.md  fromRsync  setup.cfg  toRsync
.github/workflows/: docs.yml
docs/inference/: Makefile  conditionalDistForGaussianRVs.tex  derivationKalmanFilterEqs.tex  ekfInference.tex  figLDS.tex  inverseOfBlockMatrix.tex  ldsInference.tex  linearDynamicalSystems.bib  marginalOfLinearGaussianModel.tex
docs/sphinx/: requirements.txt
docs/sphinx/source/: index.rst  introduction.rst  modules.rst  ssm.rst
docs/tracking/: tracking.tex
examples/sphinx_gallery/kinematics/: README.rst  plotEMvsGAcomparisonForagingMouse.py  plotEMvsGAcomparisonSimulated.py
examples/sphinx_gallery/neuralLatents/: README.rst  plot_MC_MAZE_SMALL.py  plot_simulations.py
examples/sphinx_gallery/onlineBayesianLinearRegression/: README.rst
src/lds/: inference.py  learning.py  simulation.py
src/lds/tracking/: utils.py
src/ssm/: inference.py  learning.py
src/ssm/neural_latents/: plotting.py  utils.py
src/ssm/neural_latents/tests/: test_utils.py
src/ssm/tracking/: plotting.py  utils.py
