[metadata]
name = lds
version = 1.0.0
description = State Space Models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/joacorapela/ssm
author = Joaquin Rapela
author_email = j.rapela@ucl.ac.uk
license = MIT
classifiers = 
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9

[options]
package_dir = 
     = src
packages = find:
install_requires = 
    numpy
    scipy

[options.packages.find]
where = src

[options.extras_require]
docs =
    sphinx-gallery
    sphinxcontrib-bibtex
    sphinx_rtd_theme
    matplotlib
    plotly
    kaleido
    pandas
    ipynb
